--- a/AuthApp/App.xaml
+++ b/AuthApp/App.xaml
@@ -2,8 +2,20 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:AuthApp"
-             StartupUri="MainWindow.xaml">
+             xmlns:viewmodels="clr-namespace:AuthApp.ViewModels"
+             xmlns:views="clr-namespace:AuthApp.Views">
     <Application.Resources>
-         
+
+        <ResourceDictionary>
+
+            <DataTemplate DataType="{x:Type viewmodels:LoginViewModel}">
+                <views:LoginView />
+            </DataTemplate>
+
+            <DataTemplate DataType="{x:Type viewmodels:RegisterViewModel}">
+                <views:RegisterView />
+            </DataTemplate>
+        </ResourceDictionary>
+
     </Application.Resources>
 </Application>
